2010-08-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14858: imageLinkWrap.JSwindow triggers XSS warning or Fails (Thanks to Jigal van Hemert)

2010-08-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15561: Add information about /dev/urandom to INSTALL.txt

2010-08-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #14143: count_menuItems not working correctly (thanks to Frederic Gaus)

2010-08-29  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15525: Caching framework database backend does not free mysql resource in collectGarbage() (Thanks to Helmut Hummel)

2010-08-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15482: htmlArea RTE: Entering line breaks with Safari not possible in TYPO3 3.4.5
	* Updated htmlArea RTE version to 1.8.12

2010-08-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #1728: Comma separated list don't accept spaces at "db_layout" in the 'addTables' feature (thanks to Niels Pardon)

2010-08-22  Francois Suter  <francois@typo3.org>

	* Fixed bug #14949: "View Item" does not resolve real MM-relations (thanks to Caspar Stuebs)

2010-08-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15514 Bugfix : wrong encoded confirm message in User Admin Module (Thanks to Sven Juergens)
	* Fixed bug #15507: Bug: MEDIA content element ignores stdWrap configuration (Thanks to Jigal van Hemert)

2010-08-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15505: t3lib_cache_backend_TransientMemoryBackend is not referenced

2010-08-19  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15494: fatal error in phpunit BE module

2010-08-13  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15450: [felogin] Spelling-error: "reseting" must be "resetting" (Thanks to Stefan Neufeind)

2010-08-13  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13662: rsaauth does not work with special characters in password (Thanks to Steffen Ritter)

2010-08-12  Steffen Kamper  <steffen@typo3.org>
